--- a/01/03.html
+++ b/01/03.html
@@ -33,8 +33,8 @@
         ctx.lineWidth = 4;
 
         // back ground Triangle
-        // ctx.fillStyle = "black";
-        // ctx.fill();
+        ctx.fillStyle = "black";
+        ctx.fill();
 
         // Draw the outline of the triangle with a single stroke
         ctx.stroke();
