--- a/01/05.html
+++ b/01/05.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vẽ ngôi sao viền</title>
+    <title>Star</title>
 </head>
 <body>
     <canvas id="starCanvas" width="500" height="200" style="border:1px solid #000;"></canvas>
