--- a/04/index.html
+++ b/04/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bouncing Ball with Energy Conservation</title>
+  <title>Ball Bounce Animation</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <div class="ball"></div>
+  <div id="container">
+    <div id="ball"></div>
   </div>
   <script src="script.js"></script>
 </body>
